# task_tracker_cli

./: README.md  pyproject.toml
db/: tasks.json
src/task_tracker_cli/: cli.py  const.py  crud.py
